[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiosteady"
authors = [{name = "Tin Tvrtkovic", email = "tinchester@gmail.com"}]
version = "22.2.0.dev0"
description = "Rate limiting for asyncio"
license = {file = "LICENSE"}
readme = "README.rst"
requires-python = ">=3.8"
dependencies = ["attrs >= 20.3.0", "aioredis >=1.3.1,<2.0.0"]

[tool.pdm.dev-dependencies]
test = [
    "pytest >= 6.2.2",
    "pytest-asyncio >= 0.19.0",
    "coverage >= 5.5",
]
lint = [
    "black >= 22.6.0",
    "mypy >= 0.961",
    "tox >= 3.23.0",
    "flake8 >= 3.8.4",
    "flake8-pyi >= 20.10.0",
]

[tool.pytest.ini_options]
addopts = "-l"
asyncio_mode = "auto"

[tool.coverage.run]
parallel = true
source_pkgs = ["aiosteady"]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
disallow_untyped_calls = true
disallow_untyped_defs = true
